--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@
 # except these
 !.gitignore
 !insurgency_start.bat
-!insurgency/*
-//mapcycle_millard.txt
+!insurgency/mapcycle_millard.txt
 //insurgency/*
 //!insurgency/cfg
