new kobra sight

--- a/insurgency/cfg/server_hunt.cfg
+++ b/insurgency/cfg/server_hunt.cfg
@@ -17,8 +17,8 @@ mp_supply_rate_winning_team_high       1
 mp_supply_rate_winning_team_low        1
 
 // PLAYERS AND BOTS NUMBERS
-ins_bot_count_hunt_min                 18
-ins_bot_count_hunt_max                 26
+ins_bot_count_hunt_min                 18   // 18
+ins_bot_count_hunt_max                 26   // 26
 ins_bot_count_hunt_default             0    // when set to 0, it will scale between the min and max depending on player count
 mp_hunt_counterattack_distance         6000 // distance bots will respond to a cache blowing up
 mp_hunt_autoattack_bot_frac            0.30 // the % of bot players that need to be left before auto attack starts
