--- a/insurgency/cfg/server.cfg
+++ b/insurgency/cfg/server.cfg
@@ -1,7 +1,8 @@
 // BASIC
 rcon_password "asdfasdfasdf" // remote console access password
-sv_password   ""      // server password
-sv_region 0 // Eastern U.S. (doesn't really matter for this game)
+sv_password   "1234"         // server password
+sv_region 0                  // Eastern U.S. (doesn't really matter)
+sv_tags "millard"            // make the server easier to find
 
 // LOGGING
 log on
