--- a/insurgency/cfg/server.cfg
+++ b/insurgency/cfg/server.cfg
@@ -1,6 +1,6 @@
 // BASIC
 rcon_password "asdfasdfasdf" // remote console access password
-sv_password "meseto"         // server password
+sv_password "change_me"      // server password
 sv_region 1                  // Western U.S. (doesn't really matter)
 sv_tags "millard"            // make the server easier to find
 
